--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ psycopg2==2.7.3.2
 pycodestyle==2.3.1
 pylint==1.7.4
 python-dateutil==2.6.1
+python-magic==0.4.15
 pytz==2017.3
 PyYAML==3.12
 reportlab==3.4.0
