--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ pillow = "==5.0.0"
 pylint = "==1.7.4"
 python-magic = "==0.4.15"
 reportlab = "==3.4.0"
+django-widget-tweaks = "*"
 
 
 [dev-packages]
