--- a/Pipfile
+++ b/Pipfile
@@ -8,17 +8,13 @@ name = "pypi"
 [packages]
 
 django = "==1.11.8"
-django-auditlog = "==0.4.4"
-django-autocomplete-light = "==3.2.10"
-django-countries = "==5.0"
-django-import-export = "==0.6.1"
-django-polymorphic = "==1.3"
-pillow = "==5.0.0"
-"psycopg2" = "==2.7.3.2"
-pylint = "==1.7.4"
-python-magic = "==0.4.15"
-reportlab = "==3.4.0"
-django-widget-tweaks = "*"
+django-autocomplete-light = "*"
+"psycopg2" = "*"
+python-magic = "*"
+django-auditlog = "*"
+django-countries = "*"
+django-polymorphic = "*"
+pylatex = "*"
 
 
 [dev-packages]
