--- a/Pipfile
+++ b/Pipfile
@@ -1,3 +1,8 @@
+[requires]
+
+python_full_version = "3.5.2"
+
+
 [[source]]
 
 url = "https://pypi.python.org/simple"
@@ -20,6 +25,8 @@ pillow = "*"
 xkcdpass = "*"
 django-widget-tweaks = "*"
 "psycopg2-binary" = "*"
+gunicorn = "*"
+django-heroku = "*"
 
 
 [dev-packages]
