--- a/.gitignore
+++ b/.gitignore
@@ -113,7 +113,16 @@ js-bs4/
 vagrant/
 logs/
 
-static/
+static/css/bootstrap.min.css
+static/css/bootstrap.min.css.map
+static/css/font-awesome.css
+static/css/font-awesome.min.css
+
+static/js/bootstrap.min.js
+static/js/jquery-3.2.1.min.js
+static/js/popper.min.js
+
+static/fonts/
 .idea/workspace.xml
 .idea/
 test_data/
