Agregar dj-database-url

--- a/Pipfile
+++ b/Pipfile
@@ -24,6 +24,8 @@ gunicorn = "*"
 django-heroku = "*"
 whitenoise = "*"
 openpyxl = "*"
+factory-boy = "*"
+dj-database-url = "*"
 
 
 [dev-packages]
