--- a/Pipfile
+++ b/Pipfile
@@ -18,7 +18,6 @@ django-import-export = "*"
 pillow = "*"
 xkcdpass = "*"
 django-widget-tweaks = "*"
-"psycopg2-binary" = "*"
 gunicorn = "*"
 django-heroku = "*"
 whitenoise = "*"
@@ -26,6 +25,7 @@ openpyxl = "*"
 factory-boy = "*"
 dj-database-url = "*"
 pylint-django = "*"
+"psycopg2" = "*"
 
 
 [dev-packages]
